# Aztheria-and-Elendor-Worlds-of-Dragons

./: .gitignore  .gitmodules  CMake.md  CMakeLists.txt  README.md  aztheria_and_elendor.code-workspace  build-engine.bat  build-game.bat  build.bat  debug.bat  doall.bat  run.bat  todo.txt
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
cmake/: macos.cmake  unix.cmake  windows.cmake
engine/: draw_funcs.cpp  fov.c  game.h  map.cpp  map.h  pathfinder.cpp  settings.h
engine/AStar/: AStar.h  Node.cpp
engine/ui/: button.cpp  button.h  menu.cpp  panel_status.h
game/: .gitignore  config.ini
game/data/: animals.xml  entity_component_xml.txt  monsters.xml  plants.xml  title.txt
include/AStar/: AStar.h  Grid.h  Node.h
src/: base.cpp  base.h  button.cpp  button.h  draw_funcs.cpp  draw_funcs.h  entity.cpp  entity.h  fov.c  fov.h  game.cpp  game.h  game_fio.cpp  game_fio.h  gamestate.h  input_funcs.cpp  input_funcs.h  main.cpp  map.cpp  map.h  materials.cpp  materials.h  menu.cpp  msg_console.cpp  msg_console.h  panel_status.cpp  panel_status.h  pathfinder.cpp  pathfinder.h  settings.cpp  settings.h  world.cpp  world.h  world_gen.cpp  world_gen.h
src/AStar/: AStar.cpp  AStar.h  Grid.cpp  Grid.h  Node.cpp  Node.h
src/ecs/: entity.cpp  entity.h  entity_actions.cpp  entity_actions.h  entity_components.cpp  entity_components.h
src/entity/: entity.cpp  entity.h
src/game_states/: createcharacter_state.cpp  createcharacter_state.h  createworld_state.cpp  createworld_state.h  loadworld_state.cpp  loadworld_state.h  mainmenu_state.cpp  mainmenu_state.h  play_state.cpp  play_state.h  state_funcs.cpp  state_funcs.h
src/gui/: button.cpp  button.h  menu.cpp  menu.h  panel_status.cpp  panel_status.h
src/include/AStar/: AStar.cpp  Grid.cpp  Node.cpp
src/map/: area.cpp  area.h  dungeon.cpp  dungeon.h  map.cpp  map.h  map_helper.cpp  map_helper.h
src/map_generators/: perlin_generator.h
src/map_objects/: block.cpp  block.h  block_builders.cpp  block_builders.h  block_components.cpp  block_components.h  block_systems.cpp  block_systems.h  tile.h
src/menus/: character_menu.cpp  character_menu.h  equipment_menu.cpp  equipment_menu.h  inventory_menu.cpp  inventory_menu.h  loot_menu.cpp  loot_menu.h  map_menu.cpp  map_menu.h
src/ui/: menu.cpp  menu.h  panel_status.cpp  panel_status.h
src/util/: file_helper.h  filesystem.h
src/world/: time_system.h  world.cpp  world.h
src/world_gen/: biome_gen.cpp  biome_gen.h  dung_gen.cpp  dung_gen.h  entitygen_helper.cpp  entitygen_helper.h  perlin_generator.cpp  perlin_generator.h  world_gen.cpp  world_gen.h
src/xml/: xml_parser.cpp  xml_parser.h
